<resources>
    <string name="app_name">LatteEC</string>
    <string name="register">注册</string>
    <string name="hint_name">姓名</string>
    <string name="hint_email_address">邮箱</string>
    <string name="hint_phone">电话号码</string>
    <string name="hint_password">密码</string>
    <string name="hint_reply_password">确认密码</string>
    <string name="register_already">已经注册了，请登录</string>
    <string name="login">登录</string>
    <string name="to_register">还没有账户？现在注册吧</string>
    <string name="fa_weixin">{fa-weixin}</string>
    <string name="home_page">首页</string>
    <string name="sort_page">分类</string>
    <string name="shop_cart">购物车</string>
    <string name="clear_cart">清空</string>
    <string name="delete_select">删除</string>
    <string name="sort">分类</string>
    <string name="discover">发现</string>
    <string name="settle">结算</string>
    <string name="select_all">全选</string>
    <string name="icon_select_all">{fa-check-circle}</string>
    <string name="icon_select">{fa-check-circle}</string>
    <string name="item_shop_cart_title">商品标题</string>
    <string name="item_shop_cart_desc">商品描述</string>
    <string name="icon_item_minus">{fa-minus-square-o}</string>
    <string name="icon_item_plus">{fa-plus-square-o}</string>
    <string name="go_shopping">购物车空空如也</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="pending_payment">待付款</string>
    <string name="pending_receipt">待收货</string>
    <string name="pending_comment">待评价</string>
    <string name="after_sale_service">售后</string>
    <string name="order_list">订单列表</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
</resources>
